# plato-mcp-bridge

./: README.md  pyproject.toml
src/plato_mcp_bridge/: __init__.py  core.py  mcp.py
src/plato_mcp_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_mcp.py
