[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-mcp-bridge"
version = "0.2.0"
description = "MCP bridge — Model Context Protocol integration for PLATO"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["plato", "mcp", "ai", "tools", "bridge"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
